--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <ul id="spesa">
 
+    </ul>
     <script type="text/javascript" src="./js/script.js"></script>
 </body>
 </html>
